Closed
Bug 1319118
Opened 4 years ago
Closed 4 years ago
HttpBaseChannel::AddSecurityMessage clobbers the high 32-bits of the inner window ID
Categories
(Core :: Networking: HTTP, defect)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
mozilla53
Tracking | Status | |
---|---|---|
firefox53 | --- | fixed |
People
(Reporter: ehsan, Assigned: ehsan)
References
Details
(Whiteboard: [necko-active])
Attachments
(1 file)
1021 bytes,
patch
|
mcmanus
:
review+
|
Details | Diff | Splinter Review |
It does so by assigning the window ID, a uint64_t to a uint32_t and then passing it to nsIScriptError::InitWithWindowId which accepts a uint64_t.
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → ehsan
Assignee | ||
Comment 1•4 years ago
|
||
This is the textbook use case for the auto keyword. :)
Attachment #8812817 -
Flags: review?(mcmanus)
Comment 2•4 years ago
|
||
Comment on attachment 8812817 [details] [diff] [review] Don't clobber half of a 64-bit window ID by assigning it to a 32-bit variable Review of attachment 8812817 [details] [diff] [review]: ----------------------------------------------------------------- thanks!
Attachment #8812817 -
Flags: review?(mcmanus) → review+
Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/11d1733837fa Don't clobber half of a 64-bit window ID by assigning it to a 32-bit variable; r=mcmanus
Updated•4 years ago
|
Whiteboard: [necko-active]
Comment 4•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/11d1733837fa
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in
before you can comment on or make changes to this bug.
Description
•