Bug 1319118 - Don't clobber half of a 64-bit window ID by assigning it to a 32-bit variable; r=mcmanus

This is the textbook use case for the auto keyword. :)